--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.5"
 
     // Kotlin Android Coroutines- lightweight threads
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M1"
 
     // Retrofit- fetching data from APIs
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
