--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,7 @@
-
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: "kotlin-kapt"
-
 apply plugin: 'kotlin-android-extensions'
-
-
 
 android {
     compileSdkVersion 28
@@ -48,12 +42,13 @@ dependencies {
 
     // Kotlin Android Coroutines- lightweight threads
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-M1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.3.0-M1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M1"
 
     // Retrofit- fetching data from APIs
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0"
@@ -68,8 +63,8 @@ dependencies {
 
     //Testing Libraries
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Image Slider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.0.2'
@@ -79,21 +74,18 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     //Lottie animations
-    implementation 'com.airbnb.android:lottie:2.5.0'
+    implementation 'com.airbnb.android:lottie:3.0.1'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //Room database
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha01"
 
-
     //Stetho
     implementation 'com.facebook.stetho:stetho-urlconnection:1.5.1'
     implementation 'com.facebook.stetho:stetho:1.5.1'
-
-
-
 }
